# BD_PAYMENT_SERVICE

./: .dockerignore  .env.example  .gitignore  Dockerfile  README_DEPLOYMENT.md  alembic.ini  docker-compose.yml  main.py  pyproject.toml
alembic/: env.py
alembic/versions/: 28641e6c7568_fix_audit_logs_admin_fk_constraints.py  89899fa92660_add_admin_role_is_active_and_audit_logs.py  a3e133f0b3fd_create_admin_users_and_bd_landing_pages.py  b18bd9478755_add_postgres_rds_production_schema.py  b88b82b2fe7a_case_insensitive_unique_index_on_admin_.py  c1a2b4d5e6f7_create_orders.py  d2e3f4a5b6c7_add_orders_variant_id.py  e3f4a5b6c7d8_drop_orders_reference_id.py  f4a5b6c7d8e9_create_webhook_logs_and_fulfilment_status.py
docker/: docker-compose.yml
docker/backend/: entrypoint.sh
frontend/: .dockerignore  Dockerfile  next.config.ts  package-lock.json
frontend/app/: globals.css  layout.tsx  page.tsx
frontend/components/: ConfirmModal.tsx  CreateAdminModal.tsx  EditAdminModal.tsx  HowThisWorksPanel.tsx  LandingPageForm.tsx  PackagePreviewPanel.tsx  ResetPasswordModal.tsx  StatusPill.tsx  Toast.tsx  Topbar.tsx
frontend/lib/: api.ts  types.ts  (+4 more)
k8s/: backend-configmap.yaml  backend-deployment.yaml  backend-service.yaml  configmap.yaml  frontend-configmap.yaml  frontend-deployment.yaml  frontend-service.yaml  ingress.yaml  secret.example.yaml
src/: app.py
tests/: conftest.py  test_admin_dashboard.py  test_admin_users.py  test_audit_log_fk.py  test_auth.py  test_catalogue_service.py  test_checkout_service.py  test_guest_checkout_integration.py  test_webhook_service.py
(+72 files in other folders)
